--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using GestãoCarros
-@namespace GestãoCarros.Pages
+@namespace GestãoCarros.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
